--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "app"
+name = "soundquest"
 version = "0.1.0"
 description = ""
-authors = ["Admin <admin@example.com>"]
+authors = ["Jonas Schweiger <jonas.schweiger@gmx.de>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -22,7 +22,6 @@ jinja2 = "^2.11.2"
 psycopg2-binary = "^2.8.5"
 alembic = "^1.4.2"
 sqlalchemy = "^1.3.16"
-pytest = "^5.4.1"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 
 [tool.poetry.dev-dependencies]
@@ -31,7 +30,7 @@ black = "^19.10b0"
 isort = "^4.3.21"
 autoflake = "^1.3.1"
 flake8 = "^3.7.9"
-pytest = "^5.4.1"
+pytest = "^6.0.0"
 sqlalchemy-stubs = "^0.3"
 pytest-cov = "^2.8.1"
 
@@ -40,6 +39,7 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 line_length = 88
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
