--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -23,6 +23,7 @@ psycopg2-binary = "^2.8.5"
 alembic = "^1.4.2"
 sqlalchemy = "^1.3.16"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
+aiofiles = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
