--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -28,13 +28,13 @@ services:
       - traefik.http.routers.${STACK_NAME?Variable not set}-traefik-public-http.rule=Host(`${DOMAIN?Variable not set}`)
       - traefik.http.services.${STACK_NAME?Variable not set}-traefik-public.loadbalancer.server.port=80
 
-  pgadmin:
-    ports:
-      - "5050:5050"
+  # pgadmin:
+  #   ports:
+  #     - "5050:5050"
 
-  flower:
-    ports:
-      - "5555:5555"
+  # flower:
+  #   ports:
+  #     - "5555:5555"
   db:
     ports:
       - "55433:5432"
@@ -61,19 +61,19 @@ services:
       - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
       - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
 
-  celeryworker:
-    volumes:
-      - ./backend/app:/app
-    environment:
-      - RUN=celery worker -A app.worker -l info -Q main-queue -c 1
-      - JUPYTER=jupyter lab --ip=0.0.0.0 --allow-root --NotebookApp.custom_display_url=http://127.0.0.1:8888
-      - SERVER_HOST=http://${DOMAIN?Variable not set}
-    build:
-      context: ./backend
-      dockerfile: celeryworker.dockerfile
-      args:
-        INSTALL_DEV: ${INSTALL_DEV-true}
-        INSTALL_JUPYTER: ${INSTALL_JUPYTER-true}
+  # celeryworker:
+  #   volumes:
+  #     - ./backend/app:/app
+  #   environment:
+  #     - RUN=celery worker -A app.worker -l info -Q main-queue -c 1
+  #     - JUPYTER=jupyter lab --ip=0.0.0.0 --allow-root --NotebookApp.custom_display_url=http://127.0.0.1:8888
+  #     - SERVER_HOST=http://${DOMAIN?Variable not set}
+  #   build:
+  #     context: ./backend
+  #     dockerfile: celeryworker.dockerfile
+  #     args:
+  #       INSTALL_DEV: ${INSTALL_DEV-true}
+  #       INSTALL_JUPYTER: ${INSTALL_JUPYTER-true}
 
   # frontend:
   #   build:
