--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -24,6 +24,7 @@ alembic = "^1.4.2"
 sqlalchemy = "^1.3.16"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 aiofiles = "^0.6.0"
+boto3 = "^1.16.18"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
