--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "next": "latest",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-player": "^2.7.0",
     "swr": "0.2.0"
   },
   "devDependencies": {
