--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -25,6 +25,7 @@ sqlalchemy = "^1.3.16"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 aiofiles = "^0.6.0"
 boto3 = "^1.16.18"
+SQLAlchemy-Utils = "^0.36.8"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
