--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-player": "^2.7.0",
-    "swr": "0.2.0"
+    "swr": "0.2.0",
+    "wavesurfer.js": "^4.3.0"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
