[mod] don't export database port

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -34,9 +34,9 @@ services:
   # flower:
   #   ports:
   #     - "5555:5555"
-  db:
-    ports:
-      - "55433:5432"
+  # db:
+  #   ports:
+  #     - "55433:5432"
 
   backend:
     ports:
@@ -62,7 +62,6 @@ services:
       - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
       - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
       - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
-
 
   # celeryworker:
   #   volumes:
